stop powered by link from breaking on whitespace

--- a/site/styles/_footer.scss
+++ b/site/styles/_footer.scss
@@ -80,6 +80,7 @@ footer {
 		margin-left: auto;
 	}
 	a {
+		white-space: nowrap;
 		font-size: 10px;
 		text-transform: uppercase;
 		font-weight: 800;
